# py-spotify-playlist

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/application/: __init__.py  spotify_auth_handler.py
src/common/base/: base_class.py
src/config/: constants.py  settings_manager.py
src/config/files/: settings.yaml
src/frontend/: app.html
src/infrastructure/: return_handler.py  serveo_tunnel_manager.py
src/static/: style.css
src/templates/: app.html  error.html
